trying bar code1

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 	<div style="display:flex">
 	
 	<div id="chart"></div>
-	
+	<script src="javascripts/index.js" type="text/javascript" charset="utf-8"></script>
 	
 </body>
 </html>
