trying bar code2

--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,13 @@
 </head>
 
 <body>
-	<div style="display:flex">
 	
-	<div id="chart"></div>
-	<script src="javascripts/index.js" type="text/javascript" charset="utf-8"></script>
+	<table style="width:100%">
+	<tr>
+	<td id="parentTable3" width="70%" bgcolor="#f4f5f6">
+			<div id="chart"></div>		
+		</td>
+	</tr>	
 	
 </body>
 </html>
