trying grid code

--- a/public/index_bar.html
+++ b/public/index_bar.html
@@ -17,7 +17,7 @@
 	<table style="width:100%">
 	<tr>
 	<td id="parentTable1" width="70%" bgcolor="#f4f5f6">
-			<div id="grid"></div>		
+			<div id="chart"></div>		
 		</td>
 	</tr>	
 	
