--- a/public/index.html
+++ b/public/index.html
@@ -19,9 +19,9 @@
 	<td id="parentTable1" width="75%" bgcolor="#f4f5f6">
 			<div id="chart"></div>		
 		</td>
-	<td id="parentTable2" width="25%" bgcolor="#f4f5f6">
+	<!-- <td id="parentTable2" width="25%" bgcolor="#f4f5f6">
 			<div id="grid"></div>		
-		</td>
+		</td> -->
 	</tr>	
 	
 </body>
