--- a/public/index_bar_staticTable.html
+++ b/public/index_bar_staticTable.html
@@ -19,10 +19,15 @@
 	<td id="parentTable1" width="75%" bgcolor="#f4f5f6">
 			<div id="chart"></div>		
 		</td>
-	<td id="parentTable2" width="25%" bgcolor="#f4f5f6">
+	<td id="parentTable2" width="25%" rowspan="2" bgcolor="#f4f5f6">
 			<div id="grid"></div>		
 		</td>
-	</tr>	
+	</tr>
+	<tr>
+		<td id="parentTable3" width="75%" bgcolor="#f4f5f6">
+			<div id="line"></div>
+		</td>
+	</tr>
 	
 </body>
 </html>
