--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,7 @@
 	
 	<table style="width:100%">
 	<tr>
-	<td id="parentTable1" width="75%" bgcolor="#f4f5f6">
-			<div id="chart"></div>		
-		</td>
+	<td id="parentTable1" width="70%" width="75%" bgcolor="#f4f5f6"><canvas id="myChart"></canvas></td>
 	<td id="parentTable2" width="25%" rowspan="2" bgcolor="#f4f5f6">
 			<div id="grid"></div>		
 		</td>
