--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
 	</tr>
 	<tr>
 		<td id="parentTable3" width="75%" bgcolor="#f4f5f6">
-			<div id="line"></div>
+			<div id="chart"></div>
 		</td>
 	</tr>
 	
