--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 	
 	<table style="width:100%">
 	<tr>
-		<td id="parentTable1" colspan="2" height="100px" bgcolor="#f4f5f6"><canvas id="myChart"></canvas></td>	
+		<td id="parentTable1" colspan="2" bgcolor="#f4f5f6"><canvas id="myChart" height="100px"></canvas></td>	
 	</tr>
 	<tr>
 		<td id="parentTable3" width="75%" bgcolor="#f4f5f6">
