--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
 			<div id="chart"></div>
 		</td>
 		<td id="parentTable2" width="20%" bgcolor="#f4f5f6">
-			<div id="grid"></div>		
+			<div id="grid" style="position:relative; bottom:175px;"></div>		
 		</td>
 	</tr>
 	
