--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,8 @@
 		<td id="parentTable3" width="80%" bgcolor="#f4f5f6">
 			<div id="chart"></div>
 		</td>
-		<td id="parentTable2" width="20%" bgcolor="#f4f5f6">
-			<div id="grid" style="position:relative; bottom:175px;"></div>		
+		<td id="parentTable2" width="20%" style="vertical-align:baseline;" bgcolor="#f4f5f6">
+			<div id="grid"></div>		
 		</td>
 	</tr>
 	
